--- a/Seguridad.html
+++ b/Seguridad.html
@@ -91,5 +91,13 @@
       modulo.classList.add('revisado');
     }
   </script>
+
+  <div class="mobile-nav">
+  <button onclick="location.href='index.html'" title="Inicio">🏠</button>
+  <button onclick="location.href='componentes.html'" title="Componentes">🧩</button>
+  <button onclick="location.href='seguridad.html'" title="Seguridad">🔒</button>
+  <button onclick="location.href='tecnologias.html'" title="Tecnologías">🛠️</button>
+  <button onclick="location.href='servicios.html'" title="Servicios">🌍</button>
+</div>
 </body>
 </html>
