--- a/servicios.html
+++ b/servicios.html
@@ -101,12 +101,14 @@
       modulo.classList.add('revisado');
     }
   </script>
-  <div class="mobile-nav">
-  <button onclick="location.href='index.html'" title="Inicio">🏠</button>
-  <button onclick="location.href='componentes.html'" title="Componentes">🧩</button>
-  <button onclick="location.href='seguridad.html'" title="Seguridad">🔒</button>
-  <button onclick="location.href='tecnologias.html'" title="Tecnologías">🛠️</button>
-  <button onclick="location.href='servicios.html'" title="Servicios">🌍</button>
-</div>
+ 
+<script>
+  fetch('menu.html')
+    .then(response => response.text())
+    .then(data => {
+      document.body.insertAdjacentHTML('beforeend', data);
+    });
+</script>
+
 </body>
 </html>
