--- a/servicios.html
+++ b/servicios.html
@@ -102,13 +102,8 @@
     }
   </script>
  
-<script>
-  fetch('menu.html')
-    .then(response => response.text())
-    .then(data => {
-      document.body.insertAdjacentHTML('beforeend', data);
-    });
-</script>
+<script src="/menu.js"></script>
+
 
 </body>
 </html>
