--- a/Seguridad.html
+++ b/Seguridad.html
@@ -92,13 +92,8 @@
     }
   </script>
 
-<script>
-  fetch('menu.html')
-    .then(response => response.text())
-    .then(data => {
-      document.body.insertAdjacentHTML('beforeend', data);
-    });
-</script>
+<script src="/menu.js"></script>
+
 
 </body>
 </html>
