--- a/tecnologias.html
+++ b/tecnologias.html
@@ -87,5 +87,7 @@ Big Data se refiere al manejo y análisis de enormes volúmenes de datos generad
       modulo.classList.add('revisado');
     }
   </script>
+<script src="/menu.js"></script>
+
 </body>
 </html>
