--- a/index.html
+++ b/index.html
@@ -90,16 +90,23 @@
     </div>
   </main>
 
+
   <footer>
     <p>2025 Historia del Internet</p>
     <button onclick="toggleSources()">Fuentes</button>
     <div id="fuentes" style="display: none; margin-top: 1rem;">
        <ol>
-        <li><a href="https://es.wikipedia.org/wiki/Historia_de_Internet" target="_blank">Historia del internet</a></li>
+        <li><a href="https://www.usg.edu/galileo/skills/unit07/internet07_02.phtml" target="_blank">Historia del internet</a></li>
         <li><a href="https://fundaciontelefonica.com/educaciondigital/iot/" target="_blank">Fundacion telefonica ioT</a></li>
         <li><a href="https://cmapspublic2.ihmc.us/rid=1239136955718_1163871558_10281/historia%20internet.pdf" target="_blank">Historia de Internet</a></li>
         <li><a href="https://blog.orange.es/consejos-y-trucos/servicios-de-internet/" target="_blank">Servicios de Internet</a></li>
         <li><a href="https://latam.kaspersky.com/resource-center/definitions/what-is-internet-security" target="_blank">Seguridad de internet</a></li>
+        <li><a href="https://www.fbi.gov/investigate/cyber" target="_blank">Ciber Crimen</a></li>
+        <li><a href="https://www.youtube.com/watch?v=dzqr7XQjbKY" target="_blank">Historia del internet video</a></li>
+        <li><a href="https://ied.eu/blog/what-are-the-basic-services-of-the-internet/" target="_blank">Mas Servicios del internet</a></li>
+        <li><a href="https://www.guvi.in/blog/components-of-the-internet/" target="_blank">Componentes del internet</a></li>
+      
+      
       </ol>
     </div>
   </footer>
