--- a/componentes.html
+++ b/componentes.html
@@ -77,7 +77,14 @@
       </div>
     </div>
   </div>
-
+  <style>
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+</style>
+<h2 style="text-align: center;">Como funcionan todos los componentes en conjunto</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x3c1ih2NJEg?si=gpiMaHComDtSuDzu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <script>
     function toggleMenu() {
       document.querySelectorAll('.circle-link').forEach(link => link.classList.toggle('show'));
