--- a/servicios.html
+++ b/servicios.html
@@ -90,7 +90,15 @@
       </div>
     </div>
   </div>
+<style>
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+</style>
 
+<h2 style="text-align: center;">breve explicacion de como tratar con los servicios</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/lNldCGjqj1M?si=3w_AjnGYGN3slF9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <script>
     function toggleMenu() {
       document.querySelectorAll('.circle-link').forEach(link => link.classList.toggle('show'));
