--- a/tecnologias.html
+++ b/tecnologias.html
@@ -76,7 +76,14 @@ Big Data se refiere al manejo y análisis de enormes volúmenes de datos generad
       </div>
     </div>
   </div>
-
+  <style>
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+</style>
+  <h2 style="text-align: center;">El futuro de la IA para 2026</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=VJ2Be1gAlW5b2Mky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <script>
     function toggleMenu() {
       document.querySelectorAll('.circle-link').forEach(link => link.classList.toggle('show'));
