--- a/Seguridad.html
+++ b/Seguridad.html
@@ -93,7 +93,24 @@
   </script>
 
 <script src="/menu.js"></script>
-
-
+<style>
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+</style>
+<style>
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+</style>
+<style>
+  h2 {
+    text-align: center;
+  }
+</style>
+<h2>Breve video sobre la historia de la ciberseguridad</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/V6p7lFsokXo?si=dM8yXR9Oi_jNVMlB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
